--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Brick Breaker Game</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -21,6 +21,6 @@
   <br>
   <a href="#">View Profile & Leaderboard</a>
 
-  <script src="#"></script>
+  <script src="./js/game.js"></script>
 </body>
 </html>
