Implement core drawing functions: drawBall, drawPaddle, and canvas setup

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <canvas id="gameCanvas" width="480" height="320" style="display:none;"></canvas>
 
   <br>
-  <a href="#">View Profile & Leaderboard</a>
+  <a href="profile.html">View Profile & Leaderboard</a>
 
   <script src="./js/game.js"></script>
 </body>
