--- a/profile.html
+++ b/profile.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>User Profile & Leaderboard</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/profile.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>User Profile & 🏆 Leaderboard</h1>
+  <h1>User Profile</h1>
   <div id="profile"></div>
+  <h1>🏆 Leaderboard</h1>
   <div id="leaderboard"></div>
   <br>
-  <a href="#">⬅ Back to Game</a>
-  <script src="#"></script>
+  <a href="index.html">⬅ Back to Game</a>
+  <script src="js/profile.js"></script>
 </body>
 </html>
