--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
     </div>
 
     <!-- Game Canvas -->
-    <div id="gameWrapper" style="display:none;">
-      <canvas id="gameCanvas" width="480" height="320"></canvas>
+    <div id="gameWrapper" style="width: 900px; height: 600px; margin: auto; display:none;">
+      <canvas id="gameCanvas" width="900" height="400" style="background-color: rgba(3, 3, 52, 0.184);"></canvas>
     </div>
 
-    <!-- Profile / Leaderboard Link -->
-    <div id="profileLink">
-      <a href="profile.html">View Profile & Leaderboard</a>
-    </div>
+
+    
   </div>
 
   <script src="./js/game.js"></script>
