--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Game Canvas -->
-    <div id="gameWrapper" style="width: 900px; height: 600px; margin: auto; display:none;">
+    <div id="gameWrapper" style="width: 900px; height: 800px; margin-left: auto; margin-right: auto; display:none;">
       <canvas id="gameCanvas" width="900" height="400" style="background-color: rgba(3, 3, 52, 0.184);"></canvas>
     </div>
 
